--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-   <link rel="stylesheet" href="js/style.css" type="text/css">
+   <link rel="stylesheet" href="style.css" type="text/css">
    <title>Hacking 101.inc</title>
  </head>
  <body>
