--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
     </div>
     <div class="image">
       <div id="suck">
-        <img src="js/1662637238702.png" alt="hacker image"
+        <img src="1662637238702.png" alt="hacker image"
              width="100%" height="100%">
 
       </div>
       <div id="buck">
-        <img src="js/six-different-types-of-hackers-1024x294.png"
+        <img src="six-different-types-of-hackers-1024x294.png"
              alt="hacker picture" width="100%" height="100%">
       </div>
 
       <div id="pip">
-        <img src=js/1_bUeStrxYhIklx_2m282hdw.png alt="hackers"
+        <img src=1_bUeStrxYhIklx_2m282hdw.png alt="hackers"
              width="100%" height="100%">
       </div>
     </div>
