--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
  <head>
    <link rel="stylesheet" href="style.css" type="text/css">
    <title>Hacking 101.inc</title>
+   <meta name="viewport" content="width=device-width,
+   initial-scale=1, minimum-scale=1" />
  </head>
  <body>
   <header>
@@ -24,7 +26,7 @@
         <li id="ddos">DDOS</li>
         <li id="filess">Fileless virus</li>
         <li id="trojan">Trojan Horse</li>
-        <li id="dhcp">DHCP</li>
+
         <li id="pass">Password</li>
         <li id="phishing">Phishing</li>
         <li id="ran">Ransomware</li>
@@ -41,7 +43,7 @@
         <li id="url">URL hijacking</li>
         <li id="xss">XSS attack</li>
         <li id="idor">Idor attack</li>
-        <li id="zero">Zero-day attack</li>
+        <li id="zero">Zero-day Attack</li>
         <a id='msip' href="#suck">Hats</a>
 
 
@@ -124,7 +126,7 @@
       </div>
 
       <div id="pip">
-        <img src=1_bUeStrxYhIklx_2m282hdw.png alt="hackers"
+        <img src="1_bUeStrxYhIklx_2m282hdw.png"
              width="100%" height="100%">
       </div>
     </div>
@@ -154,7 +156,7 @@
 
       <div id="qes">
         <form>
-          <label id="lab" for="forum">Selection one:</label>
+          <label id="lab" for="forum">Select one:</label>
           <select id="forum" name="form1">
             <option value="q">Question</option>
             <option value="i">Inquires</option>
@@ -171,7 +173,7 @@
     <div class="lasting">
      <div class="pro">
       <h4 id="ij">Contacts</h4>
-      <p id="jj"> maohrezali177@gamil.com</p>
+      <p id="jj"> @Gmail.com<br><u>mohrezali177</u></p>
 
       <h4 id="ni">Company </h4>
       <p id="nn">Hacking 101 LLC</p>
@@ -184,6 +186,7 @@
      </div>
     </div>
   </footer>
+
 
  </body>
 
@@ -207,3 +210,4 @@
 
 
 </html>
+
